fix nav buttons on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,11 +535,28 @@ flex-basis: auto;
      font-size: 100%;
 }
     #about {    
-    margin: 0 5px;
+    margin: 10px 5px 0 5px;
     padding:0;
     font-size: 90%;
+}
+
+#menu li {
+    margin-right: 10px;
+    font-size: 14px;
 }
 #welcome{
     font-size: 100%;
 }
+
+#left-about, #right-about {
+    padding: 5px;
 }
+#events >h2 {
+    margin-top: 20px;
+   
+}
+
+
+}
+
+
